# py_practice

./: pyproject.toml
first_proj/scripts/: say_hello.py
