[tool.poetry]
name = "first-proj"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "first_proj"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "first_proj.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
